--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 
 html {
-    height: 100vh;
-    background-color: #03526e;
-    background-image: url("https://www.transparenttextures.com/patterns/black-linen.png");  
+    background-color: #000000;
+    background-image: url("https://www.transparenttextures.com/patterns/black-mamba.png");
 }
