fixed text-outflow in project unit

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -13,3 +13,9 @@ div#Projects .projectlist {
     width: 60%;
     margin: auto;
 }
+
+@media screen and (max-width: 800px) {
+    div#Projects .projectlist {
+        width: 90%;
+    }
+}
