--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,5 @@
 html {
     background-color: #000000;
     background-image: url("https://www.transparenttextures.com/patterns/black-mamba.png");
+    scroll-behavior: smooth;
 }
